@@ -3,17 +3,15 @@ package quentin.UI.GUI;
 import javafx.scene.control.*;
 import quentin.UI.InputHandler;
 import quentin.UI.OutputHandler;
-
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
 public class GUIInputHandler implements InputHandler {
 
-    public boolean askPie(){
+    public boolean askPie(String whitePlayerName){
         Alert alert = new Alert(Alert.AlertType.CONFIRMATION);
         alert.setTitle("Pie Rule Dialog");
-        alert.setContentText(OutputHandler.Message.QUERY_PIE);
+        alert.setContentText(String.format(OutputHandler.Message.QUERY_PIE, whitePlayerName));
         alert.setHeaderText(null);
 
         ((Button) alert.getDialogPane().lookupButton(ButtonType.OK)).setText("Yes");
@@ -24,7 +22,7 @@ public class GUIInputHandler implements InputHandler {
     }
 
     public int askSize() {
-        ArrayList<Integer> sizes = new ArrayList<>(Arrays.asList(3, 4, 5, 6, 7, 8, 9, 10, 11,12,13));
+        List<Integer> sizes = List.of(4, 5, 6, 7, 8, 9, 10, 11, 12, 13);
         ChoiceDialog<Integer> dialog = new ChoiceDialog<>(13, sizes);
 
         dialog.setTitle("Enter Size");
@@ -32,7 +30,7 @@ public class GUIInputHandler implements InputHandler {
         dialog.setContentText(OutputHandler.Message.ASK_SIZE);
         dialog.getDialogPane().lookupButton(ButtonType.CANCEL).setDisable(true);
 
-        return dialog.showAndWait().orElse(null);
+        return dialog.showAndWait().orElse(dialog.getDefaultChoice());
     }
 
     public String askPlayerName(String playerNumber) {
@@ -48,8 +46,8 @@ public class GUIInputHandler implements InputHandler {
         dialog.setContentText(message);
         dialog.getDialogPane().lookupButton(ButtonType.CANCEL).setDisable(true);
 
-        Optional<String> result = dialog.showAndWait();
-        return result.equals(Optional.of("")) ? "Player ".concat(playerNumber) : result.orElse(null);
+        String result = dialog.showAndWait().orElse("Player ".concat(playerNumber));
+        return result.equals("") ? "Player ".concat(playerNumber) : result;
     }
 }
 
